--- a/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -543,7 +543,7 @@
                                                         <GridViewColumn.CellTemplate>
                                                             <DataTemplate>
                                                                 <StackPanel Orientation="Vertical" Margin="-2,0,0,0">
-                                                                    <Grid x:Name="panelMarkerCollapsed" Visibility="Visible">
+                                                                    <Grid x:Name="panelMarkerCollapsed" Visibility="Visible" Background="White">
                                                                         <Grid.ColumnDefinitions>
                                                                             <ColumnDefinition Width="Auto" />
                                                                             <ColumnDefinition Width="*" />
@@ -553,7 +553,7 @@
                                                                         <TextBlock Grid.Column="1" Text="{Binding Path=Name}" VerticalAlignment="Center" Margin="4,0,0,0" />
                                                                         <TextBlock Grid.Column="2" Text="{Binding Path=Position}" VerticalAlignment="Center" />
                                                                     </Grid>                                                                    
-                                                                    <Grid x:Name="panelMarkerExtended" Visibility="Collapsed">
+                                                                    <Grid x:Name="panelMarkerExtended" Visibility="Collapsed" Background="#DDDDDD">
                                                                         <Grid.ColumnDefinitions>
                                                                             <ColumnDefinition Width="*" />
                                                                             <ColumnDefinition Width="Auto" />
@@ -566,12 +566,12 @@
                                                                                     <ColumnDefinition Width="Auto" />
                                                                                 </Grid.ColumnDefinitions>
                                                                                 <TextBlock Grid.Column="0" Text="A" Padding="4" VerticalAlignment="Center" Background="Red" Foreground="White" />
-                                                                                <TextBox Grid.Column="1" x:Name="txtMarkerName" Text="{Binding Path=Name}" Margin="4,0,0,0" />
-                                                                                <TextBlock Grid.Column="2" Text="{Binding Path=Position}" VerticalAlignment="Center" />
+                                                                                <TextBox Grid.Column="1" x:Name="txtMarkerName" Text="{Binding Path=Name}" Margin="0,0,0,0" LostFocus="TxtMarkerName_OnLostFocus" />
+                                                                                <TextBlock Grid.Column="2" x:Name="lblMarkerPosition" Text="{Binding Path=Position}" VerticalAlignment="Center" Margin="4,0,0,0" />
                                                                             </Grid>                                                                            
                                                                             <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                                                                                 <TextBlock Text="Position" Margin="0,2,6,6" DockPanel.Dock="Left" VerticalAlignment="Center" />
-                                                                                <Slider x:Name="sliderMarkerPosition" Minimum="0" Value="0" Maximum="10000" Margin="0,2,0,6" DockPanel.Dock="Right" />
+                                                                                <Slider x:Name="sliderMarkerPosition" Minimum="0" Value="{Binding Path=PositionPercentage}" Maximum="1" Margin="0,2,0,6" DockPanel.Dock="Right" ValueChanged="SliderMarkerPosition_OnValueChanged" LostMouseCapture="SliderMarkerPosition_OnLostMouseCapture"  />
                                                                             </DockPanel>
                                                                         </StackPanel>
                                                                         <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="4,0,0,0">
