WPF: Fixed rendering bugs in TrackBarControl. MainWindow now uses track bars instead of standard WPF sliders.

--- a/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -290,7 +290,7 @@
                                                     </Border>
                                                 </StackPanel>
                                             </Grid>                                            
-                                            <Slider Grid.Row="1" x:Name="sliderTimeShifting" Minimum="50" Value="100" Maximum="150" Margin="0,2,0,6" ValueChanged="SliderTimeShifting_OnValueChanged" />
+                                            <controls:TrackBar Grid.Row="1" x:Name="trackTimeShifting" Minimum="50" Maximum="150" Value="100" Margin="0" Height="30" OnTrackBarValueChanged="TrackTimeShifting_OnTrackBarValueChanged" />
                                             <Grid Grid.Row="2" HorizontalAlignment="Center">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="36" />
@@ -349,7 +349,7 @@
                                                     </Border>
                                                 </StackPanel>
                                             </Grid>
-                                            <Slider Grid.Row="1" x:Name="sliderPitchShifting" Minimum="-12" Value="0" Maximum="12" Margin="0,2,0,6" ValueChanged="SliderPitchShifting_OnValueChanged" />
+                                            <controls:TrackBar Grid.Row="1" x:Name="trackPitchShifting" Minimum="-12" Maximum="12" Value="0" Margin="0" Height="30" OnTrackBarValueChanged="TrackPitchShifting_OnTrackBarValueChanged" />
                                             <Grid Grid.Row="2" HorizontalAlignment="Center">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="36" />
