--- a/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -156,7 +156,12 @@
                             <ComboBoxItem Name="WV">WV</ComboBoxItem>
                         </ComboBox>
                     </Grid>
-                    <TreeView Grid.Row="2" x:Name="treeViewLibrary" Background="White" SelectedItemChanged="treeViewLibrary_SelectedItemChanged" TreeViewItem.Expanded="treeViewLibrary_OnExpanded" Grid.ColumnSpan="2">
+                    <TreeView Grid.Row="2" x:Name="treeViewLibrary" Grid.ColumnSpan="2" Background="White" SelectedItemChanged="treeViewLibrary_SelectedItemChanged" TreeViewItem.Expanded="treeViewLibrary_OnExpanded" PreviewMouseRightButtonDown="TreeViewLibrary_OnPreviewMouseRightButtonDown" >
+                        <TreeView.ContextMenu>
+                            <ContextMenu x:Name="contextMenuLibraryBrowser">
+                                <MenuItem x:Name="menuItemLibraryBrowserPlay" Header="Play songs" Click="MenuItemLibraryBrowserPlay_OnClick" />
+                            </ContextMenu>
+                        </TreeView.ContextMenu>
                         <TreeView.ItemContainerStyle>
                             <Style TargetType="TreeViewItem">
                                 <Setter Property="Margin" Value="0,2,0,2" />
