--- a/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -145,16 +145,7 @@
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
                         <Label Grid.Column="0" Content="Filter by Sound Format:" Foreground="#CCCCCC" FontSize="11" FontFamily="/Resources/Fonts/#Roboto Regular" VerticalContentAlignment="Center" />
-                        <ComboBox Grid.Column="1" Margin="0,2,0,0">
-                            <ComboBoxItem Name="All">All</ComboBoxItem>
-                            <ComboBoxItem Name="APE">APE</ComboBoxItem>
-                            <ComboBoxItem Name="FLAC">FLAC</ComboBoxItem>
-                            <ComboBoxItem Name="MP3">MP3</ComboBoxItem>
-                            <ComboBoxItem Name="MPC">MPC</ComboBoxItem>
-                            <ComboBoxItem Name="OGG">OGG</ComboBoxItem>
-                            <ComboBoxItem Name="WMA">WMA</ComboBoxItem>
-                            <ComboBoxItem Name="WV">WV</ComboBoxItem>
-                        </ComboBox>
+                        <ComboBox Grid.Column="1" x:Name="comboSoundFormat" Margin="0,2,0,0" SelectionChanged="ComboSoundFormat_OnSelectionChanged" />
                     </Grid>
                     <TreeView Grid.Row="2" x:Name="treeViewLibrary" Grid.ColumnSpan="2" Background="White" SelectedItemChanged="treeViewLibrary_SelectedItemChanged" TreeViewItem.Expanded="treeViewLibrary_OnExpanded" PreviewMouseRightButtonDown="TreeViewLibrary_OnPreviewMouseRightButtonDown" >
                         <TreeView.ContextMenu>
