WPF: Added contextual menu for wave form scroll viewer, still a lot of work to do. Changing the position using the wave form scroll viewer now updates the position label and track bar. Started adding WPF brush resources for centralizing theme colors for the application. Fixed color mismatch between generic controls and WPF UI.

--- a/MPfm/MPfm.WPF/Classes/App.xaml
+++ b/MPfm/MPfm.WPF/Classes/App.xaml
@@ -4,12 +4,8 @@
              xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
              Startup="App_Startup">
     <Application.Resources>        
-        <!--<Style TargetType="ProgressBar">
-            <Setter Property="OverridesDefaultStyle" Value="True" />
-            <Setter Property="Background" Value="#FF242F35" />
-            <Setter Property="Foreground" Value="#FFE74C3C" />
-            <Setter Property="BorderBrush" Value="#FF242F35" />
-        </Style>-->
+        <SolidColorBrush x:Key="BrushBackgroundColor" Color="#FF20282E" />
+        <SolidColorBrush x:Key="BrushHeaderBackgroundColor" Color="#FF455865" />
         <Style TargetType="Button">
             <!--Set to true to not get any properties from the themes.-->
             <Setter Property="OverridesDefaultStyle" Value="True" />
